--- a/public/survey.html
+++ b/public/survey.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Super Friend Finder</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="jumbotron">
+
+<head>
+  <meta charset="utf-8">
+  <title>Super Friend Finder</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="jumbotron">
     <div class="container">
-    <h1 class="bold">Super Friend Finder</h1>
-    <p>Find Yourself A Super Friend.</p>
+      <h1 class="bold">Super Friend Finder</h1>
+      <p>Find Yourself A Super Friend.</p>
     </div>
   </div>
 
@@ -17,112 +19,233 @@
     <h1>Your Information</h1>
     <form>
       <div class="form-group">
-        <label for="user-name">Your Name</label>
-<input type="text" class="form-control" id="user-name" aria-describedby="user-name-required">
-<small id="user-name-required" class="form-text">Required</small>
+        <label for="username">Your Name</label>
+        <input type="text" class="form-control" id="username" aria-describedby="username-required">
+        <small id="username-required" class="form-text">Required</small>
       </div>
       <div class="form-group">
-        <label for="user-image">Your Photo</label>
-<input type="text" class="form-control" id="user-image" aria-describedby="user-image-required">
-<small id="user-image-required" class="form-text">Required</small>
+        <label for="userimage">Your Photo</label>
+        <input type="text" class="form-control" id="userimage" aria-describedby="userimage-required">
+        <small id="userimage-required" class="form-text">Required</small>
       </div>
     </form>
   </div>
 
-<div class="container">
-  <div class="container container-survey-header">
-    <h1>Survey</h1>
-    <p>Answer the questions from a scale of 1 (Strongly Disagree) to 5 (Strongly Agree)</p>
+  <div class="container">
+    <div class="container container-survey-header">
+      <h1>Survey</h1>
+      <p>Answer the questions from a scale of 1 (Strongly Disagree) to 5 (Strongly Agree)</p>
+    </div>
+
+    <div class="container">
+      <h1 class="survey-question">1. Do you believe that with great power comes great responsibility?</h1>
+      <form>
+        <div class="form-group">
+          <select class="form-control" id="question-1">
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+        </div>
+      </form>
+    </div>
+
+    <div class="container">
+      <h1 class="survey-question">2. Do people like you when you're angry?</h1>
+      <form>
+        <div class="form-group">
+          <select class="form-control" id="question-2">
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+        </div>
+      </form>
+    </div>
+
+    <div class="container">
+      <h1 class="survey-question">3. Do you like cool gadgets?</h1>
+      <form>
+        <div class="form-group">
+          <select class="form-control" id="question-3">
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+        </div>
+      </form>
+    </div>
+
+    <div class="container">
+      <h1 class="survey-question">4. Do you have any allergies to rocks?</h1>
+      <form>
+        <div class="form-group">
+          <select class="form-control" id="question-4">
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+        </div>
+      </form>
+    </div>
+
+    <div class="container">
+      <h1 class="survey-question">5. ?</h1>
+      <form>
+        <div class="form-group">
+          <select class="form-control" id="question-5">
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+        </div>
+      </form>
+    </div>
+
+  </div>
+  <div class="container-fluid container-footer">
+    <p>&copy; Nathan Alston 2018</p>
   </div>
 
-<div class="container">
-<h1 class="survey-question">1. Do you believe that with great power comes great responsibility?</h1>
-      <form>
-        <div class="form-group">
-          <select class="form-control" id="statement-1">
-              <option value=""></option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
+  <div class="modal" tabindex="1" role="dialog" id="superFriendModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title"></h1>
+          <button type="button" class="close" data-dismess="modal" aria-label="Close">
+<span aria-hidden="true">&times;</span>
+        </button>
         </div>
-      </form>
-</div>
-
-<div class="container">
-<h1 class="survey-question">2. Do people like you when you're angry?</h1>
-      <form>
-        <div class="form-group">
-          <select class="form-control" id="statement-2">
-              <option value=""></option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
+        <div class="modal-body">
+          <p id="superFriend"></p>
+          <img id="superFriendPhoto" width=350px height=250px>
         </div>
-      </form>
-</div>
-
-<div class="container">
-<h1 class="survey-question">3. Do you like cool gadgets?</h1>
-      <form>
-        <div class="form-group">
-          <select class="form-control" id="statement-3">
-              <option value=""></option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary rounded" data-dismiss="modal">Close</button>
         </div>
-      </form>
-</div>
-
-<div class="container">
-<h1 class="survey-question">4. Do you have any allergies to rocks?</h1>
-      <form>
-        <div class="form-group">
-          <select class="form-control" id="statement-4">
-              <option value=""></option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-        </div>
-      </form>
-</div>
-
-<div class="container">
-<h1 class="survey-question">5. ?</h1>
-      <form>
-        <div class="form-group">
-          <select class="form-control" id="statement-5">
-              <option value=""></option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-        </div>
-      </form>
-</div>
-
-</div>
-    <div class="container-fluid container-footer">
-    <p>&copy; Nathan Alston 2018</p>
+      </div>
     </div>
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  </div>
 
-  </body>
+  <!-- Error Modal -->
+  <div class="modal" tabindex="-1" role="dialog" id="errorModal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="model-header">
+          <h1 class="modal-title" id="errorMessage"></h1>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+<span aria-hidden="true">&times;</span>
+    </button>
+        </div>
+        <div class="modal-body">
+          <p id="errorAction"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+</body>
+
+<script type="text/javascript">
+  $.ajaxSetting.traditional = true;
+  $(".submit").on("click", function(event) {
+    var formValid = true;
+    event.preventDefault();
+    console.log("Completed Survey");
+
+    // Values from the form.
+    var name = $("#username").val().trim();
+    var photo = $("#userimage").val().trim();
+    var question1 = $("#question-1").val().trim();
+    var question2 = $("#question-2").val().trim();
+    var question3 = $("#question-3").val().trim();
+    var question4 = $("#question-4").val().trim();
+    var question5 = $("#question-5").val().trim();
+    var question6 = $("#question-6").val().trim();
+    var question7 = $("#question-7").val().trim();
+    var question8 = $("#question-8").val().trim();
+    var question9 = $("#question-9").val().trim();
+    var question10 = $("#question-10").val().trim();
+
+    var user = {
+      "name": name,
+      "photo": photo,
+      "scores": [
+        question1,
+        question2,
+        question3,
+        question4,
+        question5,
+        question6,
+        question7,
+        question8,
+        question9,
+        question10
+      ]
+    };
+
+    console.log(user);
+
+    // User validation
+    if (user.name === "") {
+      $("#errorMessage").text("No name provided.");
+      $("#errorAction").text("Provide a link to a photo of yourself in the Name field to continue.");
+      $("#errorModal").modal("show");
+      formValid = false;
+    } else if {
+      $("#errorMessage").text("No photo provided.");
+      $("#errorAction").text("Provide a link to a photo of yourself in the link to photo image field to continue.");
+      $("#errorModal").modal("show");
+      formValid = false;
+    } else {
+      // post
+      $.post("/api/friends", user, function(data) {
+        console.log(data);
+        console.log("Survey Submitted!!");
+
+        // Modal resukts
+        $("modal-title").text("Your Super Friend is:");
+        $("#superFriend").text(data.name);
+        $("#superFriendPhoto").attr("scr", data.photo).addClass("img-fluid");
+        $("#superFriendModal").modal("show");
+        $("#username").val("");
+        $("#userimage").val("");
+        $("#question-1").val("");
+        $("#question-2").val("");
+        $("#question-3").val("");
+        $("#question-4").val("");
+        $("#question-5").val("");
+        $("#question-6").val("");
+        $("#question-7").val("");
+        $("#question-8").val("");
+        $("#question-9").val("");
+        $("#question-10").val("");
+      });
+    }
+  });
+</script>
+
 </html>
